--- a/DockerfileBuild
+++ b/DockerfileBuild
@@ -7,7 +7,7 @@ RUN chmod -R 777 *
 RUN ./gradlew build -x test
 
 FROM eclipse-temurin:17-jre-alpine
-COPY --from=build /app/build/libs/*.jar /app/app.jar
+COPY --from=build /app/build/libs/Tetris.jar /app/app.jar
 WORKDIR /app
 
 EXPOSE 8080
